@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.tested"
        name="Tested"
-       version="2.1"
+       version="2.2"
        provider-name="Whiskey Media">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
