@@ -1,3 +1,6 @@
+[B]2.2[/B]
+- Switched the Tested Plugin to work off of youtube (since all videos are hosted on their now)
+
 [B]2.1[/B]
 - Fixed bug with search for non-subscribers
 
